--- a/ninjify_backend/app.json
+++ b/ninjify_backend/app.json
@@ -1,10 +1,10 @@
 {
-  "name": "Start on Heroku: Python",
-  "description": "A barebones Python app, which can easily be deployed to Heroku.",
+  "name": "Ninjify Backend",
+  "description": "A Ninjifying App!",
   "image": "heroku/python",
-  "repository": "https://github.com/heroku/python-getting-started",
+  "repository": "https://github.com/MaxDude132/coding-challenge",
   "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ],
+  "addons": [],
   "env": {
     "SECRET_KEY": {
       "description": "The secret key for the Django application.",
